# free-genai-bootcamp-2025

./: Finalsubmission.md  README.md
.github/workflows/: agent-build.yml  build-postgres-image.yml  docker-build.yml  lang-portal-build.yml  listening-comp-build.yml  quiz-gen.yml  speech-build.yml  video-translation-build.yml  vocab-importer-build.yml  writing-practice-build.yml
.kiro/specs/postgresql-advanced-features/: design.md  requirements.md  tasks.md
.kiro/specs/postgresql-migration/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md
ASL/: README.md  hello.py  pyproject.toml  train.ipynb
Database/: .env.example  .gitignore  DATABASE_SCHEMA.md  Dockerfile.postgres  README.md  docker-compose.yml  import_functions.sql  pg.sql  user_tracking_functions.sql
Database/database_features/: 01_user_management.md  02_content_management.md  03_jlpt_exam_system.md  04_spaced_repetition_system.md  05_course_curriculum_system.md  06_graph_relationship_system.md  07_analytics_reporting_system.md  08_study_activities_system.md  09_notification_system.md  10_data_import_export_system.md  user_jlpt_level_system.md
Database/import-client/: env.go  go.mod  main.go
OPEA-Comps/: .gitignore  Readme.md  docker-compose.yml  pyproject.toml
OPEA-Comps/tests/: test_app.py
Video-Trasnslation/: docker-compose.yml  main.py
agent/: .env  .env.example  .gitignore  README.md  __init__.py  api.py  config.py  docker-compose.yml  graph.py  main.py  pyproject.toml
agent/.docker/: Dockerfile.fastapi  Dockerfile.fastapi.multistage  Dockerfile.streamlit.multistage
agent/data/outputs/: lastb657_at_gmail_dot_com_comparison_data_20250301_221150.json  lastb657_at_gmail_dot_com_recommendation_20250301_221152.json
agent/models/: __init__.py
agent/nodes/: __init__.py  comparison.py  display.py  email.py  mapping.py  search.py  youtube.py
agent/utils/: __init__.py  email_templates.py  email_utils.py  prompt_templates.py  storage_utils.py  streamlit_utils.py  web_utils.py
genai-architecting/: genai-architecting.mermaid
k8s/: .gitignore  example.yaml
lang-portal/: .air.toml  .env.example  .gitignore  Backendspec.md  Dockerfile  FrontendSpec.md  Makefile  Project.md  README.md  docker-compose.yml  go.mod  go.sum  import_jlpt_data.sh  simulate_game.sh  test_api.sh  test_n5_compound.sh  test_word_builder.sh  words.db
lang-portal/cmd/api/: main.go
lang-portal/docs/: core-specs.md  database-schema.md
lang-portal/docs/api/: dashboard.md  groups.md  study.md  words.md
lang-portal/frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  instrumentation-client.ts  instrumentation.ts  next.config.mjs  package-lock.json  package.json  pg.sql  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts  tailwind.config.ts  test-sentry.js  tsconfig.json
lang-portal/frontend/ai/: prompts.ts  providers.ts
lang-portal/frontend/app/: globals.css  (+4 more)
listening-comp/: .env.example  .gitignore  Dockerfile  Goal.md  README.md  docker-compose.yml  pyproject.toml  r.sh
listening-comp/backend/: audio_generator.py  get_transcript.py  question_generator.py  structured_data.py  youtube_service.py
listening-comp/backend/data/debug/: google_search_N3.html  google_search_N5.html
listening-comp/backend/data/transcripts/: 0e0duD8_LFE.txt
listening-comp/backend/services/: audio_generator.py  vector_store.py  youtube_service.py
listening-comp/backend/utils/: directory_manager.py  logger.py  transcript_downloader.py
listening-comp/frontend/: audio_manager.py  main.py  question_manager.py  ui_manager.py
listening-comp/frontend/UI/: audio_manager.py  practice_controls.py  question_content.py  sidebar_manager.py  youtube_transcript_manager.py
listening-comp/frontend/components/: random_tests.py  youtube_tests.py
quiz-gen/: README.md  api.py  constants.py  docker-compose.yml  main.py  messages.py  models.py  pyproject.toml
quiz-gen/.docker/: Dockerfile.fastapi
sentence-constructor/: Read.md  home.md  日本語speech.md
sentence-constructor/Gemmei/: promt.md
sentence-constructor/LLama/: Promt.md  Read.md
sentence-constructor/chatgpt/: Prompt.md  prompt.xml  promt.md  tips.md
sentence-constructor/claude/: Gemmipromt.md
shoping-agent/: Dockerfile  docker-compose copy.yml  pyproject.toml
shoping-agent/data/outputs/: lastb657_at_gmail_dot_com_recommendation_20250301_204252.json
shoping-agent/models/: schemas.py
shoping-agent/nodes/: display.py  email.py  mapping.py  search.py
shoping-agent/utils/: storage_utils.py  streamlit_utils.py
speach/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  hello.py  main.py  pyproject.toml
speach/src/audio/: recorder.py
speach/src/feedback/: groq_client.py
speach/src/image_generation/: bedrock_client.py
speach/src/prompts/: feedback_prompts.py
speach/src/transcription/: whisper_client.py
speach/src/ui/: app.py
speach/src/utils/: config.py  helpers.py  logger.py
video-translation/: Dockerfile  docker-compose.yml  pyproject.toml
vocab-importer/: .env.example  .gitignore  Dockerfile  api.py  app.py  classic_apple_pie.json  docker-compose.yml  main.py  messages.py  pyproject.toml  sushi.json  words.json  work.json
vocab-importer/.docker/: Dockerfile.fastapi  Dockerfile.streamlit
writing-practice/: .env.example  .gitignore  Dockerfile  README.md  api.py  app.py  auth.py  components.py  core.py  docker-compose.yml  gradio_word.py  hello.py  main.py  messages.py  models.py  prompts.yaml  pyproject.toml  sentence.py  utils.py  word.py
writing-practice/.docker/: Dockerfile.fastapi  Dockerfile.streamlit
(+120 files in other folders)
