[project]
name = "listening-comp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "boto3>=1.36.23",
    "chroma-hnswlib>=0.7.6",
    "chromadb>=0.6.3",
    "requests>=2.32.3",
    "streamlit>=1.42.1",
    "watchdog>=6.0.0",
    "youtube-search-python>=1.6.6",
    "youtube-transcript-api>=0.6.3",
]
