[project]
name = "speach"
version = "0.1.0"
description = "Voice recording app with transcription, image generation and feedback"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.4",
    "groq>=0.18.0",
    "openai>=1.65.2",
    "pandas>=2.2.3",
    "plotly>=6.0.0",
    "streamlit>=1.42.2",
    "scipy>=1.12.0",
    "numpy>=1.26.2",
    "pillow>=10.2.0",
    "watchdog>=6.0.0",
    "loguru>=0.7.3",
    "dotenv>=0.9.9",
    "audio-recorder-streamlit>=0.0.10",
    "pydub>=0.25.1",
    "python-dotenv>=1.0.0",
]

