[project]
name = "vocab-importer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "groq>=0.19.0",
    "pydantic>=2.10.6",
    "streamlit>=1.27.0",
    "uvicorn>=0.34.0",
    "watchdog>=6.0.0",
    "python-jose[cryptography]>=3.3.0",
    "requests>=2.32.3",
]
