[project]
name = "writing-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.115.12",
    "groq>=0.18.0",
    "google-cloud-vision>=2.0.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "streamlit-drawable-canvas>=0.9.3",
    "streamlit>=1.42.2",
    "torch>=2.6.0",
    "torchvision==0.21.0",
    "uvicorn>=0.34.0",
    "Levenshtein>=0.23.0",
]
